syntax = "proto3";

import "util-message.proto";
package service_registry;

service MSRegistryService {
    rpc RegisterService(ServiceName) returns (RegistrationKey) {}
    rpc GetServiceRegistrationKey(ServiceName) returns (RegistrationKey) {}
    rpc DeregisterService(RegistrationKey) returns (Empty) {}
}

message ServiceName {
    string name = 1;
}

message RegistrationKey {
    string key = 2;
}
